--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Amara Higgins
 #logo: /assets/img/headshot_circle.png
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-minimal
+theme: pages-themes/architect@v0.2.0
